--- a/action.yml
+++ b/action.yml
@@ -56,7 +56,7 @@ runs:
             exit -1
         fi
         echo "$RESOURCES"
-        ACCOUNT_ID=$(jq -r '.[0].ResourceARN' <<< $RESOURCES | sed 's/.*\///')
+        ACCOUNT_ID=$(jq -r '.ResourceTagMappingList[0].ResourceARN' <<< $RESOURCES | sed 's/.*\///')
 
         echo "::set-output name=id::${ACCOUNT_ID}"
         echo "::set-output name=tag::${AWS_ACCOUNT_TAG}"
